--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,10 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: Aleff's WebSite
+description: I'm Alessandro Greco, aka Aleff, a Computer Science graduate with a passion for networks and IT security.
 theme: just-the-docs
 
 url: https://just-the-docs.github.io
 
 aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
+
+search_enabled: true
