--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ nav_enabled: true
 back_to_top: true
 back_to_top_text: "Back to top"
 
-footer_content: "Forked from <a href='https://just-the-docs.com/'>Just The Docs</a>, distributed by an <a href='https://github.com/just-the-docs/just-the-docs/tree/main/LICENSE.txt'>MIT license</a>."
+footer_content: "&#127279; Aleff | distributed by an [MIT License](https://github.com/just-the-docs/just-the-docs/blob/main/LICENSE.txt) | Forked from [Just The Docs](https://just-the-docs.com/)"
 
 # Footer last edited timestamp
 last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
